// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTree Given a single node selection Given a tree with some data Should render correctly 1`] = `
<div class="m-tree">
    <ul class="m-tree__content">
        <m-tree-node selectable="true" node="[object Object]" selected-nodes="/medias/Videos" auto-select-checkboxes-mode="checkbox"></m-tree-node>
        <m-tree-node selectable="true" node="[object Object]" selected-nodes="/medias/Videos" auto-select-checkboxes-mode="checkbox"></m-tree-node>
    </ul>
</div>
`;

exports[`MTree Given a single node selection Given an empty tree Should render correctly 1`] = `
<div class="m-tree">
    <p class="m-tree__empty">
        m-tree:empty
    </p>
</div>
`;

exports[`MTree Given a tree with multiple selection Given a tree with no node selected with checkboxes Should render correctly 1`] = `
<div class="m-tree m-tree--multiple-node-checkbox">
    <ul class="m-tree__content">
        <li class="m-tree-node">
            <div role="button" tabindex="1" class="m-tree-node__item m-tree-node__item--no-hover"> <span class="m-tree-node__item__label">index.html</span>
                <div class="m-checkbox m--is-checkbox-left">
                    <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
                    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
                    </label>
                    <div class="m-validation-message m-checkbox__message">
                        <m-accordion-transition transition="true"></m-accordion-transition>
                    </div>
                </div>
            </div>
        </li>
        <li class="m-tree-node">
            <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Medias</span>
                <div class="m-checkbox m--is-checkbox-left">
                    <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
                    <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
                    </label>
                    <div class="m-validation-message m-checkbox__message">
                        <m-accordion-transition transition="true"></m-accordion-transition>
                    </div>
                </div>
            </div>
            <m-accordion-transition>
                <ul class="m-tree-node__children" style="display:none;">
                    <li class="m-tree-node m-tree-node__child">
                        <div role="button" tabindex="1" class="m-tree-node__item m-tree-node__item--no-hover"> <span class="m-tree-node__item__label">Videos</span>
                            <div class="m-checkbox m--is-checkbox-left">
                                <input type="checkbox" id="mCheckbox-uuid" class="m-checkbox__hidden">
                                <label for="mCheckbox-uuid" aria-hidden="true" class="m-checkbox__wrap"><span aria-hidden="true" class="m-checkbox__input"><span class="m-checkbox__input__icon"></span></span>
                                </label>
                                <div class="m-validation-message m-checkbox__message">
                                    <m-accordion-transition transition="true"></m-accordion-transition>
                                </div>
                            </div>
                        </div>
                    </li>
                </ul>
            </m-accordion-transition>
        </li>
    </ul>
</div>
`;

exports[`MTree Given a tree with multiple selection Given a tree with two nodes selected Should render correctly 1`] = `
<div class="m-tree">
    <ul class="m-tree__content">
        <li class="m-tree-node m--is-selected">
            <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">index.html</span> </div>
        </li>
        <li class="m-tree-node">
            <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Medias</span> </div>
            <m-accordion-transition>
                <ul class="m-tree-node__children" style="display:none;">
                    <li class="m-tree-node m-tree-node__child m--is-selected">
                        <div role="button" tabindex="1" class="m-tree-node__item"> <span class="m-tree-node__item__label">Videos</span> </div>
                    </li>
                </ul>
            </m-accordion-transition>
        </li>
    </ul>
</div>
`;
